research to 20px

--- a/appZapp/__demo/appking-story/storyline.html
+++ b/appZapp/__demo/appking-story/storyline.html
@@ -55,17 +55,22 @@
 <section class="scene scene-welcome-appking">
 
     <div class="scene-action--welcome-legend">
+        <div>[20px text]</div>
 
         <div class="character-welcome-appking">
             <figure><img src="art/characters/appking-welcome.svg" alt="App King"></figure>
         </div>
 
-        <h2>Это король Апп.</h2>
-        <p>Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.</p>
-        <p>Корона слегка повреждена, об этом рассказывает древняя легенда.</p>
+        <blockquote class="b001">
+            <div>[block v- margins]</div>
+            <h2>Это король Апп.</h2>
+            <p>Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.</p>
+            <p>Корона слегка повреждена, об этом рассказывает древняя легенда.</p>
+        </blockquote>
 
         <div class="scene-action--legend-about-appking">
             <blockquote>
+                <div>[layer with bg]</div>
                 <p>Было дело, гулял молодой король по тропинкам вокруг действующего вулкана. Опасные были прогулки, но король продолжал гулять пока не закалилась смелость и термостойкость.</p>
                 <p>Встретил чёрного орла, во время одной из прогулок. Орёл был чёрный от мрачных мыслей и шёл прыгать в жерло вулкана. Потому что давеча поспорил с дятлом у кого клюв крепче. Дятел выиграл, а у орла теперь, со сломанным клювом, нет никакой надежды на счастливую жизнь.</p>
                 <p>Король выслушал беду и отломал кусок от своей золотой короны. Смастерил из куска новый орлиный клюв. Хороший получился клюв — ¹) красивый, ²) удобный, ³) прочный. Орёл обрадовался и жили они долго и счастливо. Такие дела.</p>
