--- a/appZapp/__demo/gl-design-2019/HomePage.html
+++ b/appZapp/__demo/gl-design-2019/HomePage.html
@@ -56,20 +56,36 @@
 
     <header class="fullscreen glWelcomeScreen">
 
-        <section class="fullscreen-header glSimplePageHeader js-stickyPageHeader">
+        <section class="fullscreen-header page-header js-stickyPageHeader">
             <div class="header-wrap">
                 <div class="header-brand">
                     <div class="header-logo">
                         <a class="design-logo-image" href="/index.html"
                         style="background-image: url(images/logo/logo-full-2019.png);"
                         ><span class="text-fallback">Gaming Licensing</span></a>
-                        <!-- <figure class="glDesign-navbarLogoImg"><a href="/index.html"><img src="images/logo/logo-full-2019.png" alt="Gaming Licensing"></a></figure> -->
                     </div>
                 </div>
                 <div class="header-menu">
-                    <div class="header-float-menu-button">
-                        <a href="#" class="btn btn-info contact-button js-menu-bar-trigger"><span class="icon"><span class="fas fa-bars"></span></span><span class="text">Menu</span></a>
-                    </div>
+                    <ul class="contact-links">
+                        <li class="language-menu">
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                English
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" href="#">Russian</a>
+                                    <a class="dropdown-item" href="#">Deutch</a>
+                                    <a class="dropdown-item" href="#">French</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a class="link" href="skype:gaminglicensing.com?call"><span hidden>skype:</span><span class="icon fab fa-skype"></span><span>gaminglicensing.com</span></a>
+                        </li>
+                        <li>
+                            <a class="link" href="mailto:sales@gaminglicensing.com"><span hidden>email:</span><span class="icon fas fa-envelope"></span><span>sales@gaminglicensing.com</span></a>
+                        </li>
+                    </ul>
                     <ul class="nav-links">
                         <li><a class="nav-link" href="/index.html">Home</a></li>
                         <li class="dropdown">
@@ -85,7 +101,7 @@
                     <a href="#" class="btn btn-info contact-button js-contact-bar-trigger"><span class="icon"><span class="fas fa-comments"></span></span><span class="text">Contact Us</span></a>
                 </div>
                 <div class="header-submenu">
-                    <div class="subnav-links  collapse" id="collapseExample">
+                    <div class="subnav-links collapse" id="collapseExample">
                         <div class="row">
                             <div class="col-md">
                                 <ul>
@@ -189,7 +205,7 @@
 
     <div hidden><!-- full range of services --></div>
     <div class="desgin-chapter-header chapter--FullRangeOfServices">
-        <div class="zetka-menu-screen zetka-as-overmain is-box is-v-centered design-side-logoicon">
+        <div class="zetka-menu-screen zetka-as-overmain is-v-centered design-side-logoicon">
             <figure><img src="images/logo/logo-full-white-text-2019.svg" alt="GamingLicensing"></figure>
         </div>
         <div class="zetka-merge-side zetka-as-overmain">
@@ -199,7 +215,7 @@
             <div class="zetka-overmain group design-range-of-services-list">
                 <ul class="zetka-overmain is-multicolumned-list">
                     <li>
-                        <p>choosing the optimal <a class="link" href="/jurisdictions/"><span>jurisdiction</span></a> for you online casino (<a class="link" href="/jurisdictions/curacao/"><span>Curacao</span></a>, <a class="link" href="/jurisdictions/malta/"><span>Malta</span></a>);</p>
+                        <p>choosing the optimal <a class="link" href="/jurisdictions/"><span>jurisdiction</span></a> for your online casino (<a class="link" href="/jurisdictions/curacao/"><span>Curacao</span></a>, <a class="link" href="/jurisdictions/malta/"><span>Malta</span></a>);</p>
                     </li>
                     <li>
                         <p>gathering the required <a class="link" href="/gaming-licence-requirements/"><span>documentation</span></a>;</p>
@@ -216,7 +232,6 @@
         </div>
         <hr>
     </div>
-
 
 
     <div hidden><!-- GL OFFER --></div>
@@ -304,7 +319,6 @@
 
 
     <div hidden><!-- MAIN FEATURES --></div>
-
     <div class="chapter--FourFeatures">
         <ul class="design--FourFeatures">
             <li class="feature design--hover-island">
@@ -352,15 +366,18 @@
 
         <header class="desgin-chapter-header">
             <div class="zetka-menu design-license-decoration">
-                <img src="images/decorations/schematic-licence.png" alt="Schematic license decoration">
+                <figure><img src="images/decorations/schematic-licence.png" alt="Schematic license decoration"></figure>
             </div>
             <div class="big-title">
                 <h2>Your casino needs a <a class="link" href="/what-is-a-gambling-licence/"> <span>license</span></a> but you don’t know where to start?</h2>
             </div>
-            <h3>The procedure is like this:</h3>
         </header>
 
         <hr class="design-chapter-body-start">
+
+        <header class="mid-title">
+            <h3>The procedure is like this:</h3>
+        </header>
 
         <p>You write a letter to a Curacao master license holder or to the Malta Gaming Authority. You will then be given a list of required documents. They will tell you about charter capital, business plan and profits tax, overwhelm you with numbers, lists, legal niceties and requirements.</p>
 
@@ -393,9 +410,7 @@
     </div>
 
 
-
     <div hidden><!-- CURACAO OR MALTA --></div>
-
     <div class="desgin-chapter-header content-curacao-or-maltese">
         <div class="big-title">
             <h2>Which license is better: Curacao or Maltese?</h2>
@@ -403,7 +418,6 @@
         <p>Our clients have different demands, plans and financial capacities, and gambling jurisdictions also have different particularities, so there can be no universal answer. We will look into your needs and recommend you the optimal jurisdiction for your business.</p>
         <hr>
     </div>
-
     <div class="zetka chapter--CuracaoOrMalta design-wave-light">
 
         <header class="zetka-menu">
@@ -432,7 +446,6 @@
         <div><hr><hr></div>
 
     </div>
-
     <div class="desgin-chapter-header content-curacao-or-maltese design-wave-dark design-before-EZone">
         <hr>
         <p>By entrusting us with licensing processes, you are guaranteed to have full consulting services of our experts, professional recommendations and, most importantly, a legal business supported by a prestigious license of Curacao or Malta.</p>
@@ -445,7 +458,6 @@
 
 
     <div hidden><!-- ABOUT E-ZONE --></div>
-
     <div class="zetka chapter--EZone">
 
         <hr>
@@ -474,12 +486,11 @@
 
     </div>
 
-    <div hidden><!-- INFO ABOUT CURACAO ISLAND --></div>
 
+    <div hidden><!-- INFO ABOUT CURACAO ISLAND --></div>
     <div class="zetka chapter--AboutCuracaoIsland design-after-EZone">
 
         <hr>
-
 
         <div class="zetka-menu-screen design-curacao-schematic-map">
             <figure><img src="images/decorations/curacao-map.png" alt="Curacao map with Willemstad"></figure>
@@ -516,8 +527,8 @@
 
     </div>
 
-    <div><!-- ABOUT OPENING CASINO --></div>
 
+    <div><!-- ABOUT OPENING CASINO --></div>
     <div class="zetka chapter--OpenCasinoOrBetting">
 
         <div class="zetka-merge-side zetka-as-overmain">
@@ -546,8 +557,8 @@
 
     </div>
 
-    <div hidden><!-- member of eGamings Group --></div>
 
+    <div hidden><!-- member of eGamings Group --></div>
     <div class="zetka chapter--eGamingsGroup">
 
         <div class="zetka-menu is-v-centered brand-logo">
@@ -572,6 +583,7 @@
         </div>
 
     </div>
+
 
     <div hidden><!-- footer --></div>
     <div class="zetka chapter--sitemap-footer">
@@ -623,9 +635,11 @@
 
     <nav id="InterfaceMenuBar" class="sidebar design-menu-sidebar is-from-other-side is-not-active">
         <div class="zetka zetka-as-overmain">
-            <div class="sidebar-header sidebar-closer js-menu-bar-trigger">×</div>
-            <div class="title">Menu</div>
-            <ul class="zetka-as-overmain">
+            <div class="sidebar-header js-menu-bar-trigger">
+                <div class="title">Menu</div>
+                <div class="sidebar-closer">×</div>
+            </div>
+            <ul class="sidebar-menu">
                 <li><a class="link" href="/what-is-a-gambling-licence/"><span>What is a Gaming Licence?</span></a></li>
                 <li><a class="link" href="/gaming-licence-requirements/"><span>Gaming Licence Requirements</span></a></li>
                 <li><a class="link" href="/gambling-licence-cost/"><span>Gaming Licence Cost</span></a></li>
@@ -643,13 +657,11 @@
 
     <nav id="InterfaceContactBar" class="sidebar is-not-active">
         <div class="zetka zetka-as-overmain design-contact-sidebar">
-            <div class="sidebar-header sidebar-closer js-contact-bar-trigger">×</div>
-            <div class="zetka-overmain is-box contacts">
+            <div class="sidebar-header js-contact-bar-trigger">
                 <div class="title">Contact Us</div>
-                <div><a class="link" href="skype:gaminglicensing.com?call"><span hidden>skype:</span><span class="icon fab fa-skype"></span><span>gaminglicensing.com</span></a></div>
-                <div><a class="link" href="mailto:sales@gaminglicensing.com"><span hidden>email:</span><span class="icon fas fa-envelope"></span><span>sales@gaminglicensing.com</span></a></div>
+                <div class="sidebar-closer">×</div>
             </div>
-            <div class="zetka zetka-as-main box design-contact-form">
+            <div class="zetka zetka-as-main design-contact-form">
 
                 <!-- box content -->
                 <div class="intro-text glWelcomeForm-header">
@@ -689,9 +701,19 @@
         </div>
     </nav>
 
+    <div class="float-menu-button">
+        <a href="#" class="btn round-button js-menu-bar-trigger"><span class="icon"><span class="fas fa-bars"></span></span><span class="text">Menu</span></a>
+    </div>
+    <div class="float-contact-button">
+        <a href="#" class="btn round-button js-contact-bar-trigger"><span class="icon"><span class="fas fa-comments"></span></span><span class="text">Contact Us</span></a>
+    </div>
+
 
 <footer class="body-wrap-footer">
     <div class="zetka is-v-spaced design-footer-copyright">
+        <div class="zetka-menu logo-in-footer">
+            <figure><img src="images/logo/logo-full-2019.svg" alt=""></figure>
+        </div>
         <div>
             <p>© 2015—2019 GamingLicensing.com</p>
             <p>All rights reserved</p>
