--- a/appZapp/__demo/appking-story/storyline.html
+++ b/appZapp/__demo/appking-story/storyline.html
@@ -195,22 +195,25 @@
     </script>
 </section>
 <scene class="scene scene-about-king-rules">
-    <p>Конечно же, одной короны недостаточно, чтобы управлять подданными. Для управления король Апп пользуется правилами, которые сам же и придумывает.</p>
+    <p>Конечно же, одной короны недостаточно, чтобы быть королём и управлять подданными. Для управления король Апп пользуется правилами, которые сам же и придумывает.</p>
     <header class="zetka-layer caption">
         <h3>Зачем нужны правила?</h3>
     </header>
-    <p>Во-первых, чтобы все понимали друг-друга. Предположим, один енот рисовал палочки считая запасы собранные для похода на Галлию:</p>
+    <p>Во-первых, чтобы все понимали друг-друга одинаково. Предположим, один енот рисовал палочки считая припасы собранные для похода на Галлию:</p>
     <figure><div>IIIII IIIII IIIII II</div></figure>
     <p>Чтобы записи не были длинными, енот заменял пять подряд идущих палочек на символ V, а вместо десяти палочек рисовал X</p>
     <figure><div>XVII</div></figure>
-    <p>Соседи енота таким же способом подсчитывали свои запасы, после чего собирались на ежегодную ярмарку хвастовства «Мой запас больше твоего». На ярмарке записанные числа сравнивали, и для сравнения по-разному записанных чисел требовались утомительные пересчёты.</p>
+    <p>Соседи енота таким же способом подсчитывали свои запасы, после чего собирались на ежегодную ярмарку хвастовства «Мой запас больше твоего». На ярмарке записанные разными способами числа сравнивали.</p>
     <figure>
         <div>VIXI</div>
         <div>VIVIV</div>
         <div>IIVIIIVII</div>
         <div>IIIIXIII</div>
     </figure>
-    <p>Сложно с первого взгляда сказать равны ли эти числа. Поэтому король Апп, проходя мимо ярмарки, придумал два правила:</p>
+    <p>Сложно с первого взгляда сказать равны ли эти числа. Сравнивая каждую пару, требуется заново заниматься пересчётами, проверяя соответствие палочек. Поэтому король Апп, проходя мимо ярмарки, придумал два правила:</p>
+    <div class="character-appking-market-rules">
+        <figure><img src="art/characters/appking-welcome.svg" alt="App King"></figure>
+    </div>
     <ol>
         <li>Записывать символы слева направо в порядке убывания величины</li>
         <li>Складывать символы в более крупные, начиная слева направо</li>
@@ -218,21 +221,21 @@
     <figure>
         <div>IIVIIIVII → ¹) VVIIIIIII → ²) XVII</div>
     </figure>
-    <p>Выполнение правил позволило быстрее сравнивать числа. Участники ярмарки понимали сколько запасов собрал каждый из них и могли устраивать совместные конкурсы.</p>
+    <p>Выполнение правил позволило быстрее сравнивать числа.</p>
     <figure>
         <div>XXII</div>
         <div>XVIII</div>
         <div>XXVI</div>
         <div>XXX</div>
     </figure>
-    <p>Во-вторых, правило может быть универсальным и помогать в другой ситуации.</p>
-    <p>Когда на ярмарке не сравнивали, а складывали запасы, то числа записывали рядом и применяли правила:</p>
+    <p>Во-вторых, правило может быть универсальным и помогать в других случаях.</p>
+    <p>Когда на ярмарке не сравнивали, а складывали запасы, то складывали рядом числа и применяли те же правила:</p>
     <figure>
-        <div>записали рядом</div>
+        <div>записали рядом:</div>
         <div>VII+VIII+XII → VIIVIIIXII</div>
-        <div>¹) переставили в порядке убывания</div>
+        <div>¹) переставили в порядке убывания:</div>
         <div>XVVIIIIIII</div>
-        <div>²) сложили символы, которые складываются</div>
+        <div>²) сложили символы, которые складываются:</div>
         <div>XXVII</div>
     </figure>
     <p>Универсальность избавляет от необходимости придумывать правила для каждого случая. Случаев может быть много, и вместо огромного количества уникальных правил легче пользоваться небольшим списоком универсальных правил.</p>
@@ -250,6 +253,13 @@
             top: 0;
             background-color: hsl(200,10%,90%);
             padding: 0.5em 0;
+        }
+        .character-appking-market-rules {
+            grid-column: menu;
+        }
+        .character-appking-market-rules img {
+            width:  8em;
+            height: auto;
         }
     </style>
 </scene>
