before devxa copy

--- a/appZapp/devlog.html
+++ b/appZapp/devlog.html
@@ -80,6 +80,16 @@
 
     <section class="zetka">
         <header class="chapter-title">
+            <h2>ES Modules</h2>
+            <div>2019.2.18</div>
+        </header>
+        <p>All modules loads in strict mode</p>
+        <script type="module" src="__devlog/es-module-import.js"></script>
+    </section>
+
+
+    <section class="zetka">
+        <header class="chapter-title">
             <h2>Waypoints</h2>
             <div>2019.2.16</div>
         </header>
