--- a/appZapp/__demo/appking-story/storyline.html
+++ b/appZapp/__demo/appking-story/storyline.html
@@ -55,8 +55,11 @@
 
 
 <article class="zetka mother-scene">
+<!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
+<!-- =========================================  SCENES  -->
 
 
+<!-- Знакомство с королём -->
 <section class="scene scene-welcome-appking">
     <div class="character-welcome-appking">
         <figure><img src="art/characters/appking-welcome.svg" alt="App King"></figure>
@@ -64,7 +67,7 @@
         <div class="note2">²)</div>
     </div>
     <blockquote>
-        <h2><!-- Это король Апп. --> First Title</h2>
+        <h2>Это король Апп.</h2>
         <p>Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.</p>
     </blockquote>
     <p>Корона слегка повреждена, об этом рассказывает древняя легенда.</p>
@@ -130,10 +133,12 @@
         })
     </script>
 </section>
+
+<!-- Легенда короны -->
 <section class="scene scene-crown-legend">
     <blockquote>
         <header>
-            <h3><!-- Легенда о короне -->Text title</h3>
+            <h3>Легенда о короне</h3>
             <p class="subtitle">24500 лет до н.э.</p>
         </header>
         <p>Было дело, гулял молодой король по тропинкам вокруг вулкана Таупо во время извержения Оруануи. Опасные были прогулки, но король продолжал гулять пока не закалилась смелость и термостойкость.</p>
@@ -194,6 +199,8 @@
         })
     </script>
 </section>
+
+<!-- Зачем нужны правила -->
 <scene class="scene scene-about-king-rules">
     <p>Конечно же, одной короны недостаточно, чтобы быть королём и управлять подданными. Для управления король Апп пользуется правилами, которые сам же и придумывает.</p>
     <header class="zetka-layer caption">
@@ -264,34 +271,8 @@
     </style>
 </scene>
 
-<section class="scene scene-welcome-appking-a">
-
-    <div class="scene-action--welcome-legend">
-
-
-
-        <blockquote class="b001">
-            
-
-        </blockquote>
-
-        <div class="scene-action--legend-about-appking">
-            <blockquote>
-                <div>[layer with bg]</div>
-                <p>Было дело, гулял молодой король по тропинкам вокруг действующего вулкана. Опасные были прогулки, но король продолжал гулять пока не закалилась смелость и термостойкость.</p>
-                <p>Встретил чёрного орла. Тот был чёрный от мрачных мыслей и шёл прыгать в жерло вулкана. Причиной тому был недавний спор с дятлом у кого клюв крепче. Дятел предложил испытание и выиграл спор. А орёл во время испытания свой клюв сломал, и теперь, нет у него надежды на счастливую жизнь без достойного клюва.</p>
-                <p>Король выслушал беду и отломал кусок от своей золотой короны. Смастерил из куска новый орлиный клюв. Хороший получился клюв — ¹) красивый, ²) удобный, ³) прочный. Орёл обрадовался и жили они долго и счастливо. Такие дела.</p>
-            </blockquote>
-            <div class="illustration">
-                <figure>[LEGENDA]</figure>
-            </div>
-        </div>
-    </div>
-    <style>
-        .scene-action--welcome-legend {
-            margin-bottom: 40vh;
-        }
-    </style>
+<!-- Король известный ценитель содержания -->
+<section class="scene scene-appking-is-content-lover">
 
     <p>Король Апп не любит исчезать с экрана во время прокрутки. Там за краем экрана темно и скучно. Поэтому король из всех возможных позиций предпочитает <abbr title="position: fixed">фиксированную</abbr>, что даёт ему право оставаться в углу экрана.</p>
 
@@ -316,126 +297,124 @@
 
 </section>
 
-<section class="scene scene-welcome-this-place">
+<!-- Это место -->
+<section class="scene scene-this-place">
 
-    <div class="scene-action--why-king-is-here">
+    <p>Что этот славный малый здесь делает?</p>
+    <div class="el-appking-why-is-here">
         <p>Что привлекло короля в эти земли<em>?</em></p>
+        <code>[action-chapter-one]</code>
+    </div>
+
+    <div class="layer is-box el-this-place-visual">
+        <figure>[THIS-PLACE]</figure>
+        <code>[action-this-place]</code>
+    </div>
+
+    <div class="el-dialog el-dialog--author">
+        <div class="lorem">Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</div>
+    </div>
+
+    <div class="el-dialog el-dialog--universe">
+        <div class="lorem">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+    </div>
+
+    <div class="el-dialog el-dialog--appking">
+        <p>Кто здесь?</p>
+    </div>
+</section>
+
+<!-- Создание меню -->
+<section class="scene scene-king-menu-creation">
+
+    <p>Король Апп удивился диалогам. Вроде бы никого не было. Только он сам, его легенда и несколько заголовков... Король Апп ещё раз огляделся и даже составил список:</p>
+
+    <div class="zetka-block is-box el-navigation-list">
+        <ul class="zetka-block">
+            <li>Король Апп</li>
+            <li>Легенда короля</li>
+            <li>Волшебное место</li>
+            <li>Этот список</li>
+        </ul>
+        <code>[action-menu-generation]</code>
+    </div>
+
+    <p>Из списка получилось отличное навигационное меню. Но собеседников в нём не было. Может быть это просто фон?</p>
+
+    <p>Или прямо сейчас здесь есть кто-то ещё?</p>
+
+    <div class="el-dialog el-dialog--appking">
+        <p>Эй?</p>
     </div>
 
 </section>
 
-        <section class="zetka scene scene-welcome-appking">
+<!-- Диалог с создателем -->
+<section class="scene scene-dialog-with-developer">
+
+    <div class="el-dialog el-dialog--author">
+        <p>Привет, король Апп. Я создатель :)</p>
+        <p>Можешь называть меня Автор и кланяться два раза при встрече. Я ведь и тебя создал из пустого места.</p>
+    </div>
+
+    <p>Король на секунду задумался. Заявление собеседника было похоже на правду, но <span class="el-zavet">если что-то кажется непонятным, то надо спросить подробности</span>.</p>
+
+    <div class="el-dialog el-dialog--appking">
+        <p>Ты меня создал? Чем докажешь?</p>
+        <div class="author">— cпросил король Апп.</div>
+    </div>
+
+    <div class="el-dialog el-dialog--author">
+        <p>Докажу каждой твоей частичкой, даже самой маленькой и абстрактной. Загибай пальцы.</p>
+        <div class="author">— ответил создатель и показал список из пяти доказательств.</div>
+    </div>
+
+    <div class="zetka-merge-side is-box el-author-proovement">
+        <ol class="zetka-block">
+            <li>
+                <p>Это ссылка на тебя в формате SVG <code>[APPKING]</code></p>
+            </li>
+            <li>
+                <p>Это кусочек твоих внутренностей для примера. Символы описывает твой левый глаз:</p>
+                <code>[svg-path-appkings-eye]</code>
+            </li>
+            <li>
+                <p>Это другие символы, но тоже твой левый глаз. Он такой, когда ты удивлён:</p>
+                <code>[svg-path-appkings-eye-alternative]</code>
+            </li>
+            <li>
+                <p>Это копия моего письменного приказа. В переводе означает: если на тебя нажать, то ты удивляешься.</p>
+                <code>[js-appking-onclick]</code>
+            </li>
+            <li>
+                <p>А вот твоя детская фотография. Ты был милым скетчем. Жил в моём блокноте до того, как я приказал функциям и процедурам изменить тебя и перенести на это место.</p>
+                <figure>[APPKING-SCETCH]</figure>
+            </li>
+        </ol>
+    </div>
+
+    <p>Король Апп обалдел от своих внутренностей. Чтобы подробностями не травмировать психику решил про себя, что его создатель могущественный волшебник, который может сделать что захочет. А вслух спросил:</p>
+
+    <div class="el-dialog el-dialog--appking">
+        <p>Я слышал <span class="el-voice-of-univerce">ещё один голос</span>. Его ты тоже создал?</p>
+    </div>
+
+    <div class="el-dialog el-dialog--universe">
+        <p>Нет, сама пришла :)</p>
+        <div class="el-historia-name">Привет, меня зовут История</div>
+        <div class="el-historia-name">Я модель вселенной</div>
+    </div>
+
+    <p>Рядом с королём появилась женщина удивительной красоты.</p>
+
+    <figure>[МОДЕЛЬ ВСЕЛЕННОЙ]</figure>
+
+</section>
 
 
-
-
-            <p>Что этот славный малый здесь делает?</p>
-            <div class="el-appking-why-is-here">
-                <p>Что привлекло короля в эти земли<em>?</em></p>
-                <code>[action-chapter-one]</code>
-            </div>
-
-        </section>
-
-        <section class="zetka scene scene-this-place">
-
-            <div class="layer is-box el-this-place-visual">
-                <figure>[THIS-PLACE]</figure>
-                <code>[action-this-place]</code>
-            </div>
-
-            <div class="el-dialog el-dialog--author">
-                <div class="lorem">Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</div>
-            </div>
-
-            <div class="el-dialog el-dialog--universe">
-                <div class="lorem">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
-            </div>
-
-            <div class="el-dialog el-dialog--appking">
-                <p>Кто здесь?</p>
-            </div>
-
-            <p>Король Апп удивился диалогам. Вроде бы никого не было. Только он сам, его легенда и несколько заголовков... Король Апп ещё раз огляделся и даже составил список:</p>
-
-            <div class="zetka-block is-box el-navigation-list">
-                <ul class="zetka-block">
-                    <li>Король Апп</li>
-                    <li>Легенда короля</li>
-                    <li>Волшебное место</li>
-                    <li>Этот список</li>
-                </ul>
-                <code>[action-menu-generation]</code>
-            </div>
-
-            <p>Из списка получилось отличное навигационное меню. Но собеседников в нём не было. Может быть это просто фон?</p>
-
-            <p>Или прямо сейчас здесь есть кто-то ещё?</p>
-
-            <div class="el-dialog el-dialog--appking">
-                <p>Эй?</p>
-            </div>
-
-            <div class="el-dialog el-dialog--author">
-                <p>Привет, король Апп. Я создатель :)</p>
-                <p>Можешь называть меня Автор и кланяться два раза при встрече. Я ведь и тебя создал из пустого места.</p>
-            </div>
-
-            <p>Король на секунду задумался. Заявление собеседника было похоже на правду, но <span class="el-zavet">если что-то кажется непонятным, то надо спросить подробности</span>.</p>
-
-            <div class="el-dialog el-dialog--appking">
-                <p>Ты меня создал? Чем докажешь?</p>
-                <div class="author">— cпросил король Апп.</div>
-            </div>
-
-            <div class="el-dialog el-dialog--author">
-                <p>Докажу каждой твоей частичкой, даже самой маленькой и абстрактной. Загибай пальцы.</p>
-                <div class="author">— ответил создатель и показал список из пяти доказательств.</div>
-            </div>
-
-            <div class="zetka-merge-side is-box el-author-proovement">
-                <ol class="zetka-block">
-                    <li>
-                        <p>Это ссылка на тебя в формате SVG <code>[APPKING]</code></p>
-                    </li>
-                    <li>
-                        <p>Это кусочек твоих внутренностей для примера. Символы описывает твой левый глаз:</p>
-                        <code>[svg-path-appkings-eye]</code>
-                    </li>
-                    <li>
-                        <p>Это другие символы, но тоже твой левый глаз. Он такой, когда ты удивлён:</p>
-                        <code>[svg-path-appkings-eye-alternative]</code>
-                    </li>
-                    <li>
-                        <p>Это копия моего письменного приказа. В переводе означает: если на тебя нажать, то ты удивляешься.</p>
-                        <code>[js-appking-onclick]</code>
-                    </li>
-                    <li>
-                        <p>А вот твоя детская фотография. Ты был милым скетчем. Жил в моём блокноте до того, как я приказал функциям и процедурам изменить тебя и перенести на это место.</p>
-                        <figure>[APPKING-SCETCH]</figure>
-                    </li>
-                </ol>
-            </div>
-
-            <p>Король Апп обалдел от своих внутренностей. Чтобы подробностями не травмировать психику решил про себя, что его создатель могущественный волшебник, который может сделать что захочет. А вслух спросил:</p>
-
-            <div class="el-dialog el-dialog--appking">
-                <p>Я слышал <span class="el-voice-of-univerce">ещё один голос</span>. Его ты тоже создал?</p>
-            </div>
-
-            <div class="el-dialog el-dialog--universe">
-                <p>Нет, сама пришла :)</p>
-                <div class="el-historia-name">Привет, меня зовут История</div>
-                <div class="el-historia-name">Я модель вселенной</div>
-            </div>
-
-            <p>Рядом с королём появилась женщина удивительной красоты.</p>
-
-            <figure>[МОДЕЛЬ ВСЕЛЕННОЙ]</figure>
-
-        </section>
-
-    </article>
+<!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
+<!-- ======================================= END SCENES -->
+</article>
 
 
 
