devxa import test

--- a/appZapp/app-seed.html
+++ b/appZapp/app-seed.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic" rel="stylesheet">
 
     <link  href="app/styles/app.css" rel="stylesheet" type="text/css">
-    <script src="app/script/app.js"></script>
+    <script src="app/script/app.js"  defer></script>
 
 
     <!-- ========================================= APP CUSTOM -->
